[refactor] 기술 스택 테스트 정해진 컨벤션에 따라 리팩토링
- dto builder에 id 추가
- 컨벤션에 따라 of를 from으로 수정